--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <head>
+      <link rel="icon" href="%PUBLIC_URL%/Test.svg" type="image/svg+xml" />
+    </head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Une courte description de ton site">
+    <meta property="og:title" content="Maurine Mona Cornillon Bourgeois">
+    <meta property="og:description" content="Portfolio - Web Developer JS">
+    <meta property="og:url" content="https://maurinecornillonbourgeois.com/">
+    <meta property="og:type" content="website">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Maurine Cornillon Bourgeois - Web Developer JS</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
