--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <head>
       <link rel="icon" href="%PUBLIC_URL%/Test.svg" type="image/svg+xml" />
+      <link rel="preload" href="/src/assets/fonts/Respira Black.ttf" as="font" type="font/ttf" crossorigin="anonymous">
     </head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#000000" />
