--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,12 @@
     <meta charset="utf-8" />
     <head>
       <link rel="icon" href="%PUBLIC_URL%/Test.svg" type="image/svg+xml" />
-      <link rel="preload" href="/src/assets/fonts/Respira Black.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+      <link rel="preload" as="image" href="../src/assets/img/anna/MockupAnnaMolly-min.png" />
+      <link rel="preload" as="image" href="../src/assets/img/linkera/MockupLinkerabig.png" />
+      <link rel="preload" as="image" href="../src/assets/img/estimeo/MockupEstimeo-min.png" />
+      <link rel="preload" as="image" href="../src/assets/img/game/MockUpOnePiece-min.png" />
+      <link rel="preload" as="image" href="../src/assets/img/otome/MockUpOtome-min.png" />
+
     </head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#000000" />
