--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <head>
-      <link rel="icon" href="%PUBLIC_URL%/Test.svg" type="image/svg+xml" />
       <link rel="preload" as="image" href="../src/assets/img/anna/MockupAnnaMolly-min.png" />
       <link rel="preload" as="image" href="../src/assets/img/linkera/MockupLinkerabig.png" />
       <link rel="preload" as="image" href="../src/assets/img/estimeo/MockupEstimeo-min.png" />
       <link rel="preload" as="image" href="../src/assets/img/game/MockUpOnePiece-min.png" />
       <link rel="preload" as="image" href="../src/assets/img/otome/MockUpOtome-min.png" />
-
+      <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+      <link rel="manifest" href="/site.webmanifest">
+   
     </head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#000000" />
@@ -17,7 +20,6 @@
     <meta property="og:description" content="Portfolio - Web Developer JS">
     <meta property="og:url" content="https://maurinecornillonbourgeois.com/">
     <meta property="og:type" content="website">
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
