--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,9 @@
     <meta property="og:description" content="Portfolio - Web Developer JS">
     <meta property="og:url" content="https://maurinecornillonbourgeois.com/">
     <meta property="og:type" content="website">
+    <meta property="og:image" content="https://maurinecornillonbourgeois.com/logo.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="627">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
