--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,17 @@
     <head>
       <link rel="preload" as="image" href="../src/assets/img/anna/MockupAnnaMolly-min.png" />
       <link rel="preload" as="image" href="../src/assets/img/linkera/MockupLinkerabig.png" />
-      <link rel="preload" as="image" href="../src/assets/img/estimeo/MockupEstimeo-min.png" />
-      <link rel="preload" as="image" href="../src/assets/img/game/MockUpOnePiece-min.png" />
       <link rel="preload" as="image" href="../src/assets/img/otome/MockUpOtome-min.png" />
-      <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-      <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-      <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-      <link rel="manifest" href="/site.webmanifest">
+      <link rel="preload" as="image" href="../src/assets/img/logo/Card and Envelope Black 2.png" />
+      <link rel="preload" as="image" href="../src/assets/img/logo/LOGO.svg" />
+      <link rel="preload" as="image" href="../src/assets/img/sonaura/phonesonaura.png" />
+      <link rel="preload" as="image" href="../src/assets/img/sonaura/phonelover.png" />
+      <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+      <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+      <link rel="shortcut icon" href="/favicon.ico" />
+      <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+      <meta name="apple-mobile-web-app-title" content="MyWebSite" />
+      <link rel="manifest" href="/site.webmanifest" />
    
     </head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -37,7 +41,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Maurine Cornillon Bourgeois - Web Developer JS</title>
+    <title>Maurine Cornillon Bourgeois - Développeuse & Designeuse Web</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
